Update and rename bhartdaywise.html to index.html

--- a/index.html
+++ b/index.html
@@ -2,19 +2,12 @@
  
 <!-- 
 	
-	 note_: Do not copy this code okey
-
-I nead A followers please
-Follow Me .. 
 
 
-Made by simple_hacker1
 
-Date ..: 13/04/2021
-Time for Complete ..:
-       13:39
-Github ; https://github.com/rajnikantmahato
-Telegram ;  https://t.me/simple_hacker1
+Made by lav choudhary
+
+
 
 	
 	-->
@@ -34,7 +27,7 @@ Telegram ;  https://t.me/simple_hacker1
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
 
-    <title>Happy Bhart Day </title>
+    <title>12 Th Boards ke lavde lag  gaye </title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap');
@@ -289,7 +282,7 @@ Telegram ;  https://t.me/simple_hacker1
 
 <body>
 
-    <h2>Wish you Happy <br /> birthday <br /> Samay The Mdcode</h2>
+    <h2>Wish you Happy <br /> birthday <br /> Covid 19 </h2>
     <div class="cake">
         <div class="plate">
 
@@ -318,7 +311,7 @@ Telegram ;  https://t.me/simple_hacker1
         <div class="wish">
             <p>Another adventure filled year awaits you. Welcome it by celebrating your birthday with pomp and splendor. Wishing you a very happy and fun-filled birthday! </p>
         </div>
-        <img class="profile" src="https://i.ibb.co/x5XsN62/download.jpg">
+        <img class="profile" src="https://i.ibb.co/87rtk83/12.jpg">
         <script>
             window.addEventListener("mouseover", play);
             window.addEventListener("click", play);
@@ -329,27 +322,15 @@ Telegram ;  https://t.me/simple_hacker1
         </script>
         <audio controls style="display:none;" loop id="audio">
      <source id="audio-source"
-     src="https://www.dropbox.com/s/qmiltncgmioagpr/y2mate.com%20-%20Happy%20Birthday%20To%20You%20Ji%20Whatsaap%20status%20%20Birthday%20song%20status%20%20Happy%20birthday%20whatsapp%20status.mp3?dl=1"> </audio>
+     src="https://www.dropbox.com/s/3d4yrwrj3drbnm7/5.mp3?dl=1"> </audio>
 
         <script>
-            Swal.fire('Happy birthday Prachi The Pari🎊\n A small try🧗‍♀️ to express my gratitude🤗 \n It is quite simple😕 and boring😥 as I am a beginner😔 ')
+            Swal.fire('Happy birthday Covid 19 The Pari🎊\n A small try🧗‍♀️ to express my gratitude🤗 \n It is quite simple😕 and boring😥 as I am a beginner😔 ')
         </script>
 </body>
 <!-- 
 	
-	 note_: Do not copy this code okey
-
-I nead A followers please
-Follow Me .. 
-
-
-Made by simple_hacker1
-
-Date ..: 13/04/2021
-Time for Complete ..:
-       13:39
-Github ; https://github.com/rajnikantmahato
-Telegram ;  https://t.me/simple_hacker1
+	 note_: Do not copy this codes
 
 	
 	-->
