--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 
 
-Made by lav choudhary
+Made by lav chaudhary
 
 
 
@@ -309,7 +309,7 @@ Made by lav choudhary
             </div>
         </div>
         <div class="wish">
-            <p>Another adventure filled year awaits you. Welcome it by celebrating your birthday with pomp and splendor. Wishing you a very happy and fun-filled birthday! </p>
+            <p>Another adventure filled year awaits you. Welcome it by celebrating your birthday with pomp and splendor. Wishing you a very happy and fun-filled birthday COVID sir! </p>
         </div>
         <img class="profile" src="https://i.ibb.co/87rtk83/12.jpg">
         <script>
@@ -325,12 +325,12 @@ Made by lav choudhary
      src="https://www.dropbox.com/s/3d4yrwrj3drbnm7/5.mp3?dl=1"> </audio>
 
         <script>
-            Swal.fire('Happy birthday Covid 19 The Pari🎊\n A small try🧗‍♀️ to express my gratitude🤗 \n It is quite simple😕 and boring😥 as I am a beginner😔 ')
+            Swal.fire('Happy birthday Covid 19 hmre bhagvan\n A small try🧗‍♀️ to express my gratitude🤗 \n ye background me gana😕 covid sir boards ke leye ga rhe h😥 Again Huge respect for u covid sir😔 ')
         </script>
 </body>
 <!-- 
 	
-	 note_: Do not copy this codes
+	 note_: Do not copy this codes ,nhi to teri maa ki chuu
 
 	
 	-->
